training/gatekeeper-examples/volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-volume-types-disallowed
  labels:
    app: nginx-volume-types
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    volumeMounts:
    - mountPath: /flag
      name: flag-volume
 
   
  volumes:
  - name: flag-volume
    hostPath:
      path: /flag # directory location on host
