training/gatekeeper-examples/volume2-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPVolumeTypes
metadata:
  name: volumetypes
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
