training/gatekeeper-examples/volume2-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spspvolumetypes
  annotations:
    description: Controls usage of volume types.
spec:
  crd:
    spec:
      names:
        kind: K8sPSPVolumeTypes
              
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spspvolumepath

        violation[{"msg": msg}] {
            some i
            input.review.object.spec.volumes[i].hostPath.path != "/flag"
            msg := "You can only mount on the /flag directory"  
        }
