training/gatekeeper-examples/volume3-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPVolumeNumber
metadata:
  name: volumenumber
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
