training/gatekeeper-examples/volume3-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spspvolumenumber
  annotations:
    description: Controls usage of volume types.
spec:
  crd:
    spec:
      names:
        kind: K8sPSPVolumeNumber
              
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spspvolumenumber

        violation[{"msg": msg}] {
            temp = input.review.object.spec.volumes[1]
            msg := temp
        }
